feat: create docs api uing swagger
